unpackaged/objects/OpportunityLineItem.object
<CustomObject>
  <fields>
    <fullName>Converted2Asset_Date__c</fullName>
    <label>Converted2Asset Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Converted2Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted2Asset</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Delivery_Date__c</fullName>
    <label>Delivery Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Factory_ordered__c</fullName>
    <label>Factory ordered</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Pending</fullName>
        </value>
        <value>
          <fullName>Ordered</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Installation_Date__c</fullName>
    <label>Installation Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Installed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installed by internal</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Product_Installed</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Installed_by_external__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installed by external</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Invoice_Date__c</fullName>
    <label>Invoice Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Order_Number__c</fullName>
    <label>Order Number</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>est_Manufacturing_Date__c</fullName>
    <label>est Manufacturing Date</label>
    <type>Date</type>
  </fields>
</CustomObject>